use Stream.toList